# AIcert

./: .gitignore  .secai_key  IOtool.py  LICENSE  README .md  README.md  attack_api.py  environment.yml  evaluate.out  evaluate.py  gol.py  interface.py  main.py  provenance_defence.ipynb  requirement.txt  requirements.txt  test.ipynb  test.py  test_pixeldefend.py  test_twis.py  text_lime.py  train_network.py
attacks/: __init__.py  attack.py  summary_writer.py  utils.py  visualization.py
attacks/evasion/: __init__.py  auto_attack.py  auto_projected_gradient_descent.py  boundary.py  carlini.py  deepfool.py  dpatch.py  dpatch_robust.py  fast_gradient.py  fastdrop.py  gd_uap.py  geometric_decision_based_attack.py  hop_skip_jump.py  iterative_method.py  pixel_threshold.py  projected_gradient_descent.py  saliency_map.py  simba.py  square_attack.py  universal_perturbation.py  zoo.py
attacks/poisoning/: __init__.py  adversarial_embedding_attack.py  backdoor_attack.py  clean_label_backdoor_attack.py  feature_collision_attack.py
config/: develop.py  stable.py
control/: __init__.py  detect.py
control/defense/: __init__.py  feature_squeeze.py  jpeg.py  pixel_deflection.py  region_based.py  twis.py
data/CIFAR10/: label_CIFAR10.npy
dataset/: __init__.py  base.py  dataloader.py  loader.py
dataset/CIFAR10/: adv_label_CIFAR10_FGSM.npy  adv_label_CIFAR10_PGD.npy
dataset/Dataset/: Dataset.py  datasetInfo.json  (+1 more)
estimators/: __init__.py  estimator.py  keras.py  mxnet.py  pytorch.py  scikitlearn.py  tensorflow.py
function/: __init__.py  description.txt  task.py
function/side/CMake_Research3/: CMakeLists.txt  build.sh  libresreach3.so_bak
function/side/CMake_Research3/Examples/: CMakeLists.txt  cpa.cpp  dpa.cpp  hpa.cpp  spa.cpp  ttest.cpp  x2test.cpp
function/side/CMake_Research3/Inc/: interface.h  side_channel_attack_methods.h
function/side/CMake_Research3/Inc/BASETOOL/: BaseTools.h
function/side/CMake_Research3/Inc/CNNModel/: arm_nnexamples_cifar10_inputs.h  arm_nnexamples_cifar10_weights.h  cifar10_NN_example.h  cnn.h
function/side/CMake_Research3/Inc/TRACE/: Trace.h  TraceTool.h
function/side/CMake_Research3/Src/: main.cpp
function/side/CMake_Research3/Src/AttackMethods/: correlationPowerAnalysis.cpp  differentialPowerAnalysis.cpp  horizontalPowerAnalysis.cpp  non_specific_ttest.cpp  simplePowerAnalysis.cpp  t-test.cpp  x2-test.cpp
function/side/CMake_Research3/Src/BASETOOL/: BaseTools.cpp
function/side/CMake_Research3/Src/CNNModel/: arm_convolve_HWC_q7_RGB.cpp  arm_convolve_HWC_q7_fast.cpp  arm_fully_connected_q7_opt.cpp  arm_pool_q7_HWC.cpp  arm_relu_q7.cpp  arm_softmax_q7.cpp  cifar10_NN_example.cpp  cnn.cpp
function/side/CMake_Research3/Src/TRACE/: Trace.cpp  TraceTool.cpp
function/side/CMake_Research3/Tests/: CMakeLists.txt  cpa_test.cpp  dpa_test.cpp  hpa_test.cpp  spa_test.cpp  ttest_test.cpp  x2test_test.cpp  z_functions_test.cpp
model/: __init__.py  base.py  loader.py  model.py  zoo.py
output/: S20230103_1556_929f12a_result.json  task_info.json  task_list.json  task_list.txt  test1.xlsx
utils/: functional.py
web/: index.py
(+3710 files in other folders)
